--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Hüsker Dü Flyers
 tagline: A collection of flyers for Hüsker Dü Gigs 1979 - 1987
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "A digital collection of Hüsker Dü gig flyers from 1979 through 1987"
+description: "A digital collection of Hüsker Dü gig flyers from 1979 through 1987 - Thanks to Paul Hilcoff / thirdav.com"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CBeyer
 
