--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # title of site appears in banner
 title: Hüsker Dü Flyers
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: A collection of flyers for Hüsker Dü Gigs 1979 - 1987
+tagline: A collection of flyers for Hüsker Dü gigs 1979 - 1987
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "A digital collection of Hüsker Dü gig flyers from 1979 through 1987 - Thanks to Paul Hilcoff / thirdav.com"
